# job-craiwler

./: .gitignore  pyproject.toml  settings.toml
architecture/: c4context.md
features/: upload_cv_text.feature
src/client_api/: __init__.py  endpoints.py  models.py  webserver.py
src/client_web/frontend/: .eslintrc.cjs  jest.config.ts  package-lock.json  package.json  tsconfig.json
src/client_web/frontend/src/: index.tsx
tests/functional/: test_upload_text_cv.py
tests/unit/: test_cv_model.py
